--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Analog Clock</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
+    <script src="script.js"></script>
+    <!-- social links for refinedguides.com -->
+    <script
+      src="https://refinedguides.com/assets/social.js?linkColor=%23fff&textColor=%23000"
+      defer
+    ></script>
   </head>
   <body>
     <div class="clock">
